--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.application.name=tutorpus
 spring.jpa.show_sql=true
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
 
-spring.profiles.include=oauth
+#spring.profiles.include=oauth
