--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=tutorpus
 
 spring.jpa.show_sql=true
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:mariadb://tutorpus-db.cx26ecsya9cf.ap-northeast-2.rds.amazonaws.com:3306/tutorpus_db
+spring.datasource.username=jettie
+spring.datasource.password=tutorpus1234!
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.profiles.include=oauth
